# bitcoin-clearing-server

./: README.md  bitcoin-clearing-server.cabal  runEverything.sh  stack.yaml
config/: server.cfg
flat/: BitcoinSigner.Lib.Arming.API.hs  BitcoinSigner.Lib.Arming.App.hs  BitcoinSigner.Lib.Arming.Class.hs  BitcoinSigner.Lib.Arming.Client.Arm.hs  BitcoinSigner.Lib.Arming.Client.Lib.hs  BitcoinSigner.Lib.Arming.Client.Main.hs  BitcoinSigner.Lib.Arming.Client.Network.hs  BitcoinSigner.Lib.Arming.Constants.hs  BitcoinSigner.Lib.Arming.Handler.RecvKey.hs  BitcoinSigner.Lib.Arming.Handler.SignalDone.hs  BitcoinSigner.Lib.Arming.KeyHolder.hs  BitcoinSigner.Lib.Arming.Spawn.hs  BitcoinSigner.Lib.Arming.Test.hs  BitcoinSigner.Lib.Arming.Types.hs  BitcoinSigner.Lib.Arming.hs  BitcoinSigner.Lib.Signing.API.hs  BitcoinSigner.Lib.Signing.App.hs  BitcoinSigner.Lib.Signing.Config.hs  BitcoinSigner.Lib.Signing.Handler.Pubkey.hs  BitcoinSigner.Lib.Signing.Handler.Redeem.hs  BitcoinSigner.Lib.Signing.Handler.Settle.hs  BitcoinSigner.Lib.Signing.KeyCounter.hs  BitcoinSigner.Lib.Signing.Orphans.hs  BitcoinSigner.Lib.Signing.Settle.hs  BitcoinSigner.Lib.Signing.hs  BitcoinSigner.Main.hs  ClearingServer.API.hs  ClearingServer.Config.Example.hs  ClearingServer.Config.Types.hs  ClearingServer.Handlers.Callback.ValueRecv.hs  ClearingServer.Handlers.Redeem.hs  ClearingServer.Handlers.Solvency.hs  ClearingServer.Lib.App.Callback.hs  ClearingServer.Lib.App.Issue.hs  ClearingServer.Lib.Types.Data.hs  ClearingServer.Lib.Types.Error.hs  ClearingServer.Lib.Types.Serialization.hs  ClearingServer.Lib.Types.hs  ClearingServer.Main.hs  Lib.ChanMapCopy.Init.hs  (+43 more)
k8/: note-signer-secret.yaml  paychan-clearing.yaml
src/: Main.hs  Modinv.hs  PromissoryNote.hs  Types.hs  Util.hs
src/BitcoinSigner/: Main.hs
src/BitcoinSigner/API/: Boot.hs  Crypto.hs
src/BitcoinSigner/Client/: Lib.hs  Main.hs
src/BitcoinSigner/Lib/: Arming.hs  Config.hs  KeyCounter.hs  Orphans.hs  Settle.hs  Signing.hs
src/BitcoinSigner/Lib/App/: Boot.hs  Crypto.hs
src/BitcoinSigner/Lib/Arming/: API.hs  App.hs  Class.hs  Constants.hs  KeyHolder.hs  Server.hs  Spawn.hs  Test.hs  Types.hs
src/BitcoinSigner/Lib/Arming/Client/: Arm.hs  Lib.hs  Main.hs  Network.hs
src/BitcoinSigner/Lib/Arming/Handler/: RecvKey.hs  SignalDone.hs
src/BitcoinSigner/Lib/Handler/: Arming.hs  ArmingDone.hs  Class.hs  Pubkey.hs  Redeem.hs  Settle.hs
src/BitcoinSigner/Lib/Signing/: API.hs  App.hs  Config.hs  KeyCounter.hs  Orphans.hs  Settle.hs
src/BitcoinSigner/Lib/Signing/Handler/: Pubkey.hs  Redeem.hs  Settle.hs
src/ClearingServer/: API.hs  Interface.hs  Main.hs  Types.hs
src/ClearingServer/Config/: Example.hs  Orphans.hs  Parse.hs  Types.hs  Util.hs
src/ClearingServer/Handlers/: Deliver.hs  Delivery.hs  Info.hs  Order.hs  Redeem.hs  Redemption.hs  Solvency.hs
src/ClearingServer/Handlers/Callback/: ValueRecv.hs
src/ClearingServer/Lib/: Types.hs
src/ClearingServer/Lib/App/: Callback.hs  Issue.hs
src/ClearingServer/Lib/Types/: Data.hs  Error.hs  Serialization.hs
src/ClearingServer/Server/: Callback.hs  Issue.hs
src/ClearingServer/Types/: Data.hs  Response.hs  Serialization.hs
src/IssueStore/: Types.hs
src/Lib/: ChanMapCopy.hs
src/Lib/ChanMapCopy/: Init.hs  Payment.hs  Types.hs
src/Lib/Handler/: Class.hs
src/NoteSigner/: API.hs  App.hs  Config.hs  Interface.hs  Main.hs  Types.hs
src/NoteSigner/Handler/: CheckReady.hs  SignNote.hs
src/NoteSigner/Lib/: Orphans.hs
src/NoteSigner/Types/: ChanMapCopy.hs  Error.hs  Request.hs
src/NoteStore/: API.hs  Interface.hs  Lib.hs  Main.hs  Orphans.hs  Server.hs  Types.hs
src/NoteStore/Config/: Types.hs
src/PromissoryNote/: Note.hs  Redeem.hs  Serialization.hs  Types.hs
src/Store/: API.hs  Interface.hs  Lib.hs  Main.hs  Orphans.hs  Server.hs  Types.hs
src/Store/Config/: Types.hs
src/Types/: Config.hs  Data.hs  Response.hs  UUID.hs
src/Types/Bitcoin/: Fee.hs
src/Util/: Common.hs  Config.hs  Crypto.hs  Hex.hs  KeyBox.hs  Log.hs  Retry.hs
src/Util/Bitcoin/: ChainMap.hs  Fee.hs  Wallet.hs
src/Util/Bitcoin/Wallet/: Cmd.hs  Config.hs  Init.hs  Interface.hs  Keys.hs  NodeList.hs  Server.hs  Test.hs  Types.hs
src/Util/Config/: Parse.hs
src/Util/Env/: Parse.hs
src/Util/Servant/: Run.hs
