name:                 bitcoin-clearing-server
version:              0.1.0.0
synopsis:             Bitcoin payments without Blockchain fees
-- description:
-- license:
-- license-file:
homepage:             https://github.com/rune
author:               Rune K. Svendsen
maintainer:           runesvend@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10


source-repository head
  type:     git
  location: https://github.com/runeksvendsen/bitcoin-clearing-server

executable bitcoin-clearing-server
  main-is:              ClearingServer/Main.hs

  ghc-options:          -W -main-is ClearingServer.Main

  default-extensions:   OverloadedStrings

  build-depends:        base >= 4.7 && < 5
                    ,   bytestring
                    ,   base16-bytestring
                    ,   binary
                    ,   aeson
                    ,   bitcoin-payment-channel
                    ,   haskell-rbpcp-api
                    ,   haskoin-core
                    ,   mtl
                    ,   transformers
                    ,   eccrypto
                    ,   MonadRandom
                    ,   SHA
                    ,   crypto-api
                    ,   secp256k1
                    ,   largeword
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   http-api-data
                    ,   http-media
                    ,   http-client
                    ,   http-client-tls
                    ,   wai
                    ,   warp
                    ,   configurator
                    ,   string-conversions
                    ,   tagged
                    ,   text
                    ,   stm-diskmap
                    ,   hashable
                    ,   cryptohash-sha256
                    ,   cereal
                    ,   errors

  hs-source-dirs:       src

  default-language:     Haskell2010

  other-modules:        ClearingServer.API
                        ClearingServer.Config.Types
                        ClearingServer.Handlers.Order
                        ClearingServer.Handlers.Redeem
                        ClearingServer.Types
                        ClearingServer.Types.Data
                        PromissoryNote
                        PromissoryNote.Serialization
                        PromissoryNote.Types
                        Types
                        Types.Config
                        Types.Crypto
                        Types.Orphans
                        Types.UUID
                        Util
                        Util.Config
                        Util.Config.Parse
                        Util.Hex



executable note-store
  main-is:              Store/Main.hs

  default-extensions:   OverloadedStrings

  ghc-options:          -W -main-is Store.Main

  build-depends:        base >= 4.7 && < 5
                    ,   bytestring
                    ,   base16-bytestring
                    ,   binary
                    ,   aeson
                    ,   bitcoin-payment-channel
                    ,   haskell-rbpcp-api
                    ,   haskoin-core
                    ,   mtl
                    ,   transformers
                    ,   eccrypto
                    ,   MonadRandom
                    ,   SHA
                    ,   crypto-api
                    ,   secp256k1
                    ,   largeword
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   http-api-data
                    ,   http-media
                    ,   http-client
                    ,   http-client-tls
                    ,   wai
                    ,   warp
                    ,   configurator
                    ,   string-conversions
                    ,   tagged
                    ,   text
                    ,   stm-diskmap
                    ,   hashable
                    ,   cryptohash-sha256
                    ,   cereal
                    ,   errors

  hs-source-dirs:       src

  default-language:     Haskell2010

  other-modules:        ClearingServer.Types.Data
                        PromissoryNote
                        PromissoryNote.Serialization
                        PromissoryNote.Types
                        Store.Config.Types
                        Store.Lib
                        Store.Types
                        Types
                        Types.Config
                        Types.Crypto
                        Types.Orphans
                        Types.UUID
                        Util
                        Util.Config
                        Util.Config.Parse
                        Util.Hex
