name:                 bitcoin-clearing-server
version:              0.1.0.0
synopsis:             Bitcoin payments without Blockchain fees
-- description:
-- license:
-- license-file:
homepage:             https://github.com/rune
author:               Rune K. Svendsen
maintainer:           runesvend@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10


source-repository head
  type:     git
  location: https://github.com/runeksvendsen/bitcoin-clearing-server

--executable bitcoin-clearing-server
--  main-is:              ClearingServer/Main.hs
--
--  ghc-options:          -W -main-is ClearingServer.Main
--
--  default-extensions:   OverloadedStrings RecordWildCards FlexibleContexts
--
--  build-depends:        base >= 4.7 && < 5
--                    ,   bytestring
--                    ,   base16-bytestring
--                    ,   binary
--                    ,   aeson
--                    ,   bitcoin-payment-channel
--                    ,   haskell-rbpcp-api
--                    ,   haskoin-core
--                    ,   mtl
--                    ,   transformers
--                    ,   eccrypto
--                    ,   MonadRandom
--                    ,   SHA
--                    ,   crypto-api
--                    ,   secp256k1
--                    ,   largeword
--                    ,   servant
--                    ,   servant-server
--                    ,   servant-client
--                    ,   http-api-data
--                    ,   http-media
--                    ,   http-client
--                    ,   http-client-tls
--                    ,   wai
--                    ,   warp
--                    ,   configurator
--                    ,   string-conversions
--                    ,   tagged
--                    ,   text
--                    ,   key-value-store
--                    ,   hashable
--                    ,   cryptohash-sha256
--                    ,   cereal
--                    ,   errors
--                    ,   lifted-base, monad-control, transformers
--
--  hs-source-dirs:       src
--  default-language:     Haskell2010
--  other-modules:


--executable note-signer
--  main-is:              NoteSigner/Main.hs
--
--  ghc-options:          -W -main-is NoteSigner.Main
--
--  default-extensions:   OverloadedStrings
--
--  build-depends:        base >= 4.7 && < 5
--                    ,   bitcoin-payment-channel
--                    ,   stm-containers
--                    ,   chanstore-api
--                    ,   servant
--                    ,   servant-server
--                    ,   servant-client
--
--  hs-source-dirs:       src
--
--  default-language:     Haskell2010
--
--  other-modules:        ClearingServer.API
--                        ClearingServer.Config.Types
--                        ClearingServer.Handlers.Order
--                        ClearingServer.Handlers.Redeem
--                        ClearingServer.Types
--                        ClearingServer.Types.Data
--                        PromissoryNote
--                        PromissoryNote.Serialization
--                        PromissoryNote.Types
--                        Types
--                        Types.Config
--                        Types.Crypto
--                        Types.Orphans
--                        Types.UUID
--                        Util
--                        Util.Config
--                        Util.Config.Parse
--                        Util.Hex

executable bitcoin-signer
  main-is:              BitcoinSigner/Main.hs
  ghc-options:          -Wall -main-is BitcoinSigner.Main
  default-extensions:   OverloadedStrings RecordWildCards FlexibleContexts MultiParamTypeClasses
  build-depends:        base >= 4.7 && < 5
                    ,   haskoin-core
                    ,   haskoin-node
                    ,   haskoin-wallet
                    ,   zeromq4-haskell
                    ,   stm-containers
                    ,   persistent
                    ,   data-default
                    ,   aeson-pretty
                    ,   monad-logger
                    ,   unordered-containers
                    ,   persistent-sqlite
                    ,   resourcet
                    ,   aeson
                    ,   text
                    ,   bytestring
                    ,   configurator
                    ,   cryptohash-sha256
                    ,   text
                    ,   hashable
                    ,   key-value-store
                    ,   string-conversions
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   http-api-data
                    ,   http-media
                    ,   http-client
                    ,   http-client-tls
                    ,   errors
                    ,   mtl
                    ,   wai
                    ,   warp
                    ,   cereal
                    ,   base16-bytestring
                    ,   bitcoin-payment-channel
                    ,   rate-limit, time-units
                    ,   lifted-base, monad-control, transformers
                    ,   haskeline
                    ,   stm

  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:
                        BitcoinSigner.API.Boot
                        BitcoinSigner.API.Crypto
                        BitcoinSigner.Lib.App.Boot
                        BitcoinSigner.Lib.App.Crypto
                        BitcoinSigner.Lib.Arming.KeyHolder
                        BitcoinSigner.Lib.Arming.Server
                        BitcoinSigner.Lib.Arming.Test
                        BitcoinSigner.Lib.Arming.Types
                        BitcoinSigner.Lib.Config
                        BitcoinSigner.Lib.Handler.Arming
                        BitcoinSigner.Lib.Handler.ArmingDone
                        BitcoinSigner.Lib.Handler.Class
                        BitcoinSigner.Lib.Handler.Pubkey
                        BitcoinSigner.Lib.Handler.Redeem
                        BitcoinSigner.Lib.Handler.Settle
                        BitcoinSigner.Lib.Orphans
                        BitcoinSigner.Lib.Settle
                        ClearingServer.Lib.Types.Data
                        PromissoryNote
                        PromissoryNote.Note
                        PromissoryNote.Redeem
                        PromissoryNote.Serialization
                        Types.Bitcoin.Fee
                        Types.Orphans
                        Util.Bitcoin.Fee
                        Util.Bitcoin.Wallet
                        Util.Bitcoin.Wallet.Cmd
                        Util.Bitcoin.Wallet.Config
                        Util.Bitcoin.Wallet.Init
                        Util.Bitcoin.Wallet.Interface
                        Util.Bitcoin.Wallet.Keys
                        Util.Bitcoin.Wallet.NodeList
                        Util.Bitcoin.Wallet.Server
                        Util.Common
                        Util.Config
                        Util.Crypto
                        Util.Log
                        Util.Servant.Run


executable bitcoin-signer-arm
  main-is:              BitcoinSigner/Client/Main.hs
  ghc-options:          -Wall -main-is BitcoinSigner.Client.Main
  default-extensions:   OverloadedStrings RecordWildCards FlexibleContexts MultiParamTypeClasses
  build-depends:        base >= 4.7 && < 5
                    ,   haskoin-core
                    ,   haskoin-node
                    ,   haskoin-wallet
                    ,   zeromq4-haskell
                    ,   stm-containers
                    ,   persistent
                    ,   data-default
                    ,   aeson-pretty
                    ,   monad-logger
                    ,   unordered-containers
                    ,   persistent-sqlite
                    ,   resourcet
                    ,   aeson
                    ,   text
                    ,   bytestring
                    ,   configurator
                    ,   cryptohash-sha256
                    ,   text
                    ,   hashable
                    ,   key-value-store
                    ,   string-conversions
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   http-api-data
                    ,   http-media
                    ,   http-client
                    ,   http-client-tls
                    ,   errors
                    ,   mtl
                    ,   wai
                    ,   warp
                    ,   cereal
                    ,   base16-bytestring
                    ,   bitcoin-payment-channel
                    ,   rate-limit, time-units
                    ,   lifted-base, monad-control, transformers
                    ,   haskeline
                    ,   stm

  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:
