name:                 bitcoin-clearing-server
version:              0.1.0.0
synopsis:             Bitcoin payments without Blockchain fees
-- description:
-- license:
-- license-file:
homepage:             https://github.com/rune
author:               Rune K. Svendsen
maintainer:           runesvend@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10


source-repository head
  type:     git
  location: https://github.com/runeksvendsen/bitcoin-clearing-server

executable bitcoin-clearing-server
  main-is:              ClearingServer/Main.hs

  ghc-options:          -W -main-is ClearingServer.Main

  default-extensions:   OverloadedStrings RecordWildCards FlexibleContexts

  build-depends:        base >= 4.7 && < 5
                    ,   bytestring
                    ,   base16-bytestring
                    ,   binary
                    ,   aeson
                    ,   bitcoin-payment-channel
                    ,   promissory-note-types
                    ,   haskell-rbpcp-api
                    ,   haskoin-core
                    ,   haskoin-wallet
                    ,   haskoin-node
                    ,   zeromq4-haskell
                    ,   mtl
                    ,   transformers
                    ,   eccrypto
                    ,   MonadRandom
                    ,   SHA
                    ,   crypto-api
                    ,   secp256k1
                    ,   largeword
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   http-api-data
                    ,   http-media
                    ,   http-client
                    ,   http-client-tls
                    ,   wai
                    ,   warp
                    ,   configurator
                    ,   string-conversions
                    ,   tagged
                    ,   text
--                    ,   key-value-store
                    ,   hashable
                    ,   cryptohash-sha256
                    ,   cereal
                    ,   errors
                    ,   lifted-base, monad-control, transformers
                    ,   stm
                    ,   stm-containers
                    ,   monad-logger
                   ,   unordered-containers
                   ,   persistent-sqlite
                   ,   resourcet

  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:            ClearingServer.API
                            ClearingServer.Config.Types
                            ClearingServer.Handlers.Callback.ValueRecv
                            ClearingServer.Handlers.Redeem
                            ClearingServer.Lib.App.Callback
                            ClearingServer.Lib.App.Issue
                            ClearingServer.Lib.Types
                            ClearingServer.Lib.Types.Data
                            ClearingServer.Lib.Types.Error
                            NoteSigner.Types.Error
                            NoteSigner.Types.Request
                            Types
                            Types.Config
                            Types.Orphans
                            Types.UUID
                            Util
                            Util.Common
                            Util.Config
                            Util.Config.Parse
                            Util.Crypto
                            Util.Hex
                            Util.Log
                            Util.Retry
                            Util.Bitcoin.ChainCache
                            Util.Bitcoin.Wallet



executable note-signer
  main-is:              NoteSigner/Main.hs

  ghc-options:          -W -main-is NoteSigner.Main

  default-extensions:   OverloadedStrings RecordWildCards FlexibleContexts MultiParamTypeClasses
                        MultiParamTypeClasses TypeSynonymInstances FlexibleInstances DeriveAnyClass
                        DeriveGeneric

  build-depends:        base >= 4.7 && < 5
                    ,   bitcoin-payment-channel
                    ,   promissory-note-types
                    ,   haskoin-core
                    ,   haskoin-wallet
                    ,   haskoin-node
                    ,   zeromq4-haskell
                    ,   stm
                    ,   stm-containers
                    ,   hashable
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   time
                    ,   cereal
                    ,   wai
                    ,   warp
                    ,   text
                    ,   bytestring
                    ,   mtl
                    ,   configurator
                    ,   cryptohash-sha256
                    ,   aeson
                    ,   text
--                    ,   key-value-store
                    ,   mtl
                    ,   string-conversions
                    ,   errors
                    ,   transformers
                    ,   base16-bytestring
                    ,   lifted-base
                    ,   monad-logger
                    ,   unordered-containers
                    ,   persistent-sqlite
                    ,   resourcet

  hs-source-dirs:       src

  default-language:     Haskell2010

  other-modules:        Util.Bitcoin.ChainCache
                        Util.Bitcoin.Wallet

executable bitcoin-signer
  main-is:              BitcoinSigner/Main.hs
  ghc-options:          -W -main-is BitcoinSigner.Main
  default-extensions:   OverloadedStrings RecordWildCards FlexibleContexts MultiParamTypeClasses
                        MultiParamTypeClasses TypeSynonymInstances FlexibleInstances DeriveAnyClass
                        DeriveGeneric
  build-depends:        base >= 4.7 && < 5
                    ,   haskoin-core
                    ,   haskoin-node
                    ,   haskoin-wallet
                    ,   zeromq4-haskell
                    ,   stm-containers
                    ,   persistent
                    ,   data-default
                    ,   aeson-pretty
                    ,   monad-logger
                    ,   unordered-containers
                    ,   persistent-sqlite
                    ,   resourcet
                    ,   aeson
                    ,   text
                    ,   bytestring
                    ,   configurator
                    ,   cryptohash-sha256
                    ,   text
                    ,   hashable
--                    ,   key-value-store
                    ,   string-conversions
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   http-api-data
                    ,   http-media
                    ,   http-client
                    ,   http-client-tls
                    ,   errors
                    ,   mtl
                    ,   wai
                    ,   warp
                    ,   cereal
                    ,   base16-bytestring
                    ,   bitcoin-payment-channel
                    ,   promissory-note-types
                    ,   rate-limit, time-units
                    ,   lifted-base, monad-control, transformers
                    ,   haskeline
                    ,   stm


  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:        Util.Bitcoin.ChainCache
                        Util.Bitcoin.Wallet


executable bitcoin-signer-arm
  main-is:              BitcoinSigner/Lib/Arming/Client/Main.hs
  ghc-options:          -Wall -main-is BitcoinSigner.Lib.Arming.Client.Main
  default-extensions:   OverloadedStrings RecordWildCards FlexibleContexts MultiParamTypeClasses
                        MultiParamTypeClasses TypeSynonymInstances FlexibleInstances DeriveAnyClass
                        DeriveGeneric
  build-depends:        base >= 4.7 && < 5
                    ,   haskoin-core
                    ,   haskoin-node
                    ,   haskoin-wallet
                    ,   zeromq4-haskell
                    ,   stm-containers
                    ,   persistent
--                    ,   data-default
--                    ,   aeson-pretty
                    ,   monad-logger
                    ,   unordered-containers
                    ,   persistent-sqlite
                    ,   resourcet
                    ,   aeson
                    ,   text
                    ,   bytestring
                    ,   configurator
                    ,   cryptohash-sha256
                    ,   text
                    ,   hashable
--                    ,   key-value-store
                    ,   string-conversions
                    ,   servant
                    ,   servant-server
                    ,   servant-client
                    ,   http-api-data
                    ,   http-media
                    ,   http-client
                    ,   http-client-tls
                    ,   errors
                    ,   mtl
                    ,   wai
                    ,   warp
                    ,   cereal
                    ,   base16-bytestring
                    ,   bitcoin-payment-channel
                    ,   promissory-note-types
                    ,   rate-limit, time-units
                    ,   lifted-base, monad-control, transformers
                    ,   haskeline
                    ,   stm

  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:        Util.Bitcoin.ChainCache
                        Util.Bitcoin.Wallet